--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "~2.4.0",
     "mozilla-download": "~0.4.1-alpha",
     "node-static": "0.6.9",
-    "travis-project-jobs": "0.0.1"
+    "travis-project-jobs": "0.0.1",
+    "marionette-file-manager": "0.0.2"
   }
 }
