--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dive": "0.3.0",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "0.5.0",
-    "grunt-jsdoc": "0.5.0"
+    "grunt-jsdoc": "0.5.0",
+    "marionette-file-manager": "0.0.2"
   }
 }
