--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/dialer/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/dialer/manifest.ini
@@ -18,3 +18,6 @@ expected = fail
 
 [test_call_log_all_calls.py]
 skip-if = device == "desktop"
+
+[test_dialer_find_contact.py]
+skip-if = device == "desktop"
