Bug 942175 - Add a search bar at the system level

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ manifest.appcache
 /apps/calendar/js/presets.js
 /apps/camera/js/config.js
 /apps/gallery/js/config.js
+/apps/homescreen/search/
 /apps/homescreen/js/init.json
 /apps/costcontrol/js/config.json
 /apps/sms/js/blacklist.json
