--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/cards_view/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/cards_view/manifest.ini
@@ -7,6 +7,8 @@ b2g = true
 [test_cards_view_kill_app.py]
 
 [test_cards_view_kill_app_with_three_apps.py]
+expected = fail
+#  Bug 915138 - Cards view can have a maximum of 3 cards
 
 [test_cards_view_with_three_apps.py]
 #  Bug 915138 - Cards view can have a maximum of 3 cards
