--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -40,6 +40,7 @@ disabled = Bug 877611
 [functional/keyboard/test_keyboard.py]
 [functional/lockscreen/test_lockscreen_unlock_to_homescreen.py]
 disabled = Bug 891882
+[functional/messages/test_sms_contact_input_validation.py]
 [functional/settings/test_settings_change_keyboard_language.py]
 [functional/settings/test_settings_change_language.py]
 [functional/settings/test_settings_do_not_track.py]
