--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gaia",
   "private": true,
   "version": "0.0.1",
-  "description": "A bundle of components which Gaia needs in order to leverage marionette-js-runner",
+  "description": "A bundle of components which Gaia needs in order to leverage marionette-js-runner.",
   "author": "Gareth Aye <gaye@mozilla.com>",
   "devDependencies": {
     "debug": "*",
