--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -9,6 +9,8 @@ skip-if = device == "desktop"
 
 [test_sms_with_attachments.py]
 skip-if = device == "desktop"
+# Bug 945774 - Messages app is closing while resizing an image for MMS from the Camera
+expected = fail
 
 [test_sms_to_dialer.py]
 skip-if = device == "desktop"
