--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
   - CI_ACTION=test_agent
   - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
+  - CI_ACTION=build_tests
   - CI_ACTION=jshint
 matrix:
   allow_failures:
