Bug 932723 - Add a test to verify that received SMS are notified to the user

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -17,3 +17,6 @@ skip-if = device == "desktop"
 [test_sms_contact_match.py]
 
 [test_sms_contact_input_validation.py]
+
+[test_sms_notification.py]
+skip-if = device == "desktop"
