Bug 943881 - Add camera=true tag to test_sms_with_attachments.py

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -8,6 +8,7 @@ skip-if = device == "desktop"
 [test_sms_add_contact.py]
 
 [test_sms_with_attachments.py]
+camera = true
 skip-if = device == "desktop"
 
 [test_sms_to_dialer.py]
