--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/everythingme/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/everythingme/manifest.ini
@@ -7,12 +7,10 @@ online = true
 fail-if = device == "desktop"
 
 [test_everythingme_add_collection.py]
-# Bug 893741 - Unable to use Everything.me on B2G desktop builds
-fail-if = device == "desktop"
+disabled = Bug 891882 - Several components rely on touch events are malfunctioning on B2G desktop (master)
 
 [test_everythingme_app_install.py]
-# Bug 877604 - long_press action failing on B2G desktop client when installing an Everything.me app
-fail-if = device == "desktop"
+disabled = Bug 891882 - Several components rely on touch events are malfunctioning on B2G desktop (master)
 
 [test_everythingme_search.py]
 # Bug 893741 - Unable to use Everything.me on B2G desktop builds
