--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
@@ -8,7 +8,6 @@ b2g = true
 [test_geolocation_prompt.py]
 
 [test_edge_gestures.py]
-# Bug 891882  Several components rely on touch events are malfunctioning on B2G desktop
-fail-if = device == "desktop"
+disabled = Bug 891882 - Several components rely on touch events are malfunctioning on B2G desktop(master)
 
 [test_system_message.py]
