Bug 937085 - Write test to flick calendar through months
Conflicts:
	tests/python/gaia-ui-tests/gaiatest/tests/functional/calendar/manifest.ini

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/calendar/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/calendar/manifest.ini
@@ -4,3 +4,5 @@ b2g = true
 [test_calendar_today_date.py]
 
 [test_calendar_new_event_appears_on_all_calendar_views.py]
+
+[test_calendar_flick_through_months.py]
