--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
   - CI_ACTION=gaia_ui_tests
   - CI_ACTION=jshint
 matrix:
+  fast_finish: true
   allow_failures:
     - env: CI_ACTION=jshint
 notifications:
