--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
 matrix:
   allow_failures:
     - env: CI_ACTION=jshint
+    - env: CI_ACTION=gaia_ui_tests
 notifications:
   email: false
   irc:
