--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,29 @@
-before_install: "travis_retry npm install"
-install: "./node_modules/.bin/travisaction $CI_ACTION install"
+before_install: travis_retry npm install
+install: ./node_modules/.bin/travisaction $CI_ACTION install
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "./node_modules/.bin/travisaction $CI_ACTION before_script"
-script: "./node_modules/.bin/travisaction $CI_ACTION script"
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- ./node_modules/.bin/travisaction $CI_ACTION before_script
+script: ./node_modules/.bin/travisaction $CI_ACTION script
+after_script: ./node_modules/.bin/travisaction $CI_ACTION after_script
 branches:
   except:
-    - v1-train
-    - v1.1.0hd
-    - v1.0.0
-    - v1.0.1
+  - v1-train
+  - v1.1.0hd
+  - v1.0.0
+  - v1.0.1
 env:
+  matrix:
   - CI_ACTION=gjslint
   - CI_ACTION=test_agent
   - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
   - CI_ACTION=build_tests
   - CI_ACTION=jshint
+  global:
+  - ARTIFACTS_S3_BUCKET=mozilla-releng-travis-uploads
+  - secure: Gf2qm+xhLRTotuIvDD7HrNRmng3/dctGdsgF5P4aEu3nDujfxtZTp4sGirTqIngbfVzh9WkJ9eoT0yaDXtvWkr40Df6vwAUyI3P1x+NBOa2CkLz7U+f9j1yaJ3pJ121+L3o+7eTzJy/mvXHJYXAfa7rxcmjrCHpH5BSm+9/OZ4s=
+  - secure: JgNTK2gfJY1UcpXU/j0MFUvB1P7GaQyOVKBT19uwE2xCsO+T00YWnEhDGFZ9CxYDsATQ5EG5cW/eaoqXOpI9QQsR5kEJp1N1rLvKliqtGcm/ocVjWl/dhsG1i+ksJSCm1oDwduEuLFZ7tChrXihiZ2Sn1RAWns0mjZw9+8+tDhU=
 matrix:
   fast_finish: true
   allow_failures:
@@ -28,4 +34,4 @@ notifications:
   irc:
     on_success: change
     channels:
-      - "irc.mozilla.org#gaia"
+    - irc.mozilla.org#gaia
