--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -16,8 +16,8 @@ b2g = true
 disabled = Bug 877611
 [functional/calendar/test_calendar_today_date.py]
 [functional/cards_view/test_cards_view_kill_apps_with_two_apps.py]
-[functional/cards_view/test_cards_view_launch_app.py]
-[functional/cards_view/test_cards_view_with_three_apps.py]
+[functional/cards_view/test_cards_view_with_two_apps.py]
+disabled = Bug 946130
 [functional/clock/test_clock_add_alarm_multiple_times.py]
 [functional/clock/test_clock_create_new_alarm.py]
 [functional/clock/test_clock_delete_alarm.py]
