--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "marionette-device-host": "0.0.1",
     "marionette-helper": "0.1.0",
     "marionette-profile-builder": "0.0.2",
-    "marionette-js-runner": "0.4.0",
+    "marionette-js-runner": "0.4.0-non-native",
     "marionette-settings-api": "~0.1.0",
     "mocha": "1.15.0",
     "mocha-json-proxy": "~0.0.7",
