Bug 948822 - Fix xfail message for test_cards_view_with_two_apps.py

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/cards_view/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/cards_view/manifest.ini
@@ -5,5 +5,5 @@ b2g = true
 [test_cards_view_kill_apps_with_two_apps.py]
 
 [test_cards_view_with_two_apps.py]
-#  Bug #946130 - Flick not working on select time - hour 24 picker
+# Bug 946130 -  Flick and other actions not working on System app
 expected = fail
