--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ branches:
     - v1.0.0
     - v1.0.1
 env:
-  - CI_ACTION=gjslint
-  - CI_ACTION=test_agent
-  - CI_ACTION=marionette_js
+#  - CI_ACTION=gjslint
+#  - CI_ACTION=test_agent
+#  - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
-  - CI_ACTION=build_tests
-  - CI_ACTION=jshint
+#  - CI_ACTION=build_tests
+#  - CI_ACTION=jshint
 matrix:
   fast_finish: true
   allow_failures:
