--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "mocha-tbpl-reporter": "~0.0.4",
     "mozilla-download": "~0.4.1-alpha",
     "node-static": "0.6.9",
-    "travis-project-jobs": "0.0.1"
+    "travis-project-jobs": "0.0.1",
+    "grunt": "~0.4.2",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-jsdoc": "0.4.2"
   }
 }
