Bug 951570 - Disable persona tests they failing because of http://personatestuser.org/

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
@@ -3,5 +3,7 @@ b2g = true
 online = true
 
 [test_persona_cookie.py]
+disabled = Bug 951570 - Disable persona tests they failing because of http://personatestuser.org/
 
 [test_persona_app.py]
+disabled = Bug 951570 - Disable persona tests they failing because of http://personatestuser.org/
