Bug 929172 - gaia unit tests broken in b2g desktop due to fast CSP enhancement r=yurenju
* registers special /common and /shared directories
* changes httpd.js to handle correctly registered directories
* changes the test-agent boilerplate to always use the test's hostname
* add a NO_LOCK_SCREEN env variable for disabling the lockscreen at build time
* add a "unit tests in b2g" travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ branches:
 env:
   matrix:
   - CI_ACTION=gjslint
-  - CI_ACTION=test_agent
+  - CI_ACTION=unit-tests-in-b2g
+  - CI_ACTION=unit-tests-in-firefox
   - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
   - CI_ACTION=build_tests
@@ -25,6 +26,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - env: CI_ACTION=jshint
+    - env: CI_ACTION=unit-tests-in-b2g
 notifications:
   email: false
   irc:
