--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/music/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/music/manifest.ini
@@ -7,3 +7,6 @@ skip-if = device == "desktop"
 
 [test_music_empty.py]
 skip-if = device == "desktop"
+
+[test_music_songs_3gp.py]
+skip-if = device == "desktop"
