Making Camera Makefile selfcontained. Removing dependencies with gaia main Makefile

--- a/apps/camera/Makefile
+++ b/apps/camera/Makefile
@@ -1,9 +1,5 @@
-# We can't figure out XULRUNNERSDK on our own; it's complex and some builders
-# # may want to override our find logic (ex: TBPL), so let's just leave it up to
-# # the root Makefile.  If you know what you're doing, you can manually define
-# # XULRUNNERSDK and XPCSHELLSDK on the command line.
-ifndef XPCSHELLSDK
-$(error This Makefile needs to be run by the root gaia makefile. Use `make APP=camera` from the root gaia directory.)
+ifeq ($(strip $(NODEJS)),)
+	NODEJS := `which node`
 endif
 
 rwildcard=$(wildcard $1$2) $(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2))
@@ -25,7 +21,9 @@ clean:
 	rm -rf $(BUILD_DIR)
 
 $(BUILD_DIR)/js/main.js: manifest.webapp index.html $(SHARED_SOURCES) $(JS_SOURCES) $(LOCALES_SOURCES) $(RESOURCES_SOURCES) $(STYLE_SOURCES) $(BUILD_SOURCES)
+	@test -x "$(NODEJS)" || (echo "Please Install NodeJS -- (use aptitude on linux or homebrew on osx)" && exit 1 )
 	@rm -rf $(BUILD_DIR)
 	@mkdir -p $(BUILD_DIR)
 	cp -rp ../../shared $(BUILD_DIR)/shared
-	$(XULRUNNERSDK) $(XPCSHELLSDK) ../../build/r.js -o build/require_config.jslike
+	node build/configure.js
+	node ../../build/r.js -o build/require_config.jslike
