--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/settings/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/settings/manifest.ini
@@ -39,6 +39,7 @@ sdcard = true
 [test_settings_wallpaper.py]
 
 [test_settings_passcode.py]
+disable = Bug 952889
 
 [test_settings_change_keyboard_language.py]
 
