--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,9 @@ manifest.appcache
 /tools/test-agent/node_modules
 /test-output.xml
 /mocha-test-results.html
-/build/custom-extensions.json
-/build/custom-prefs.js
-/build/custom-settings.json
+/build/config/custom-extensions.json
+/build/config/custom-prefs.js
+/build/config/custom-settings.json
 /build_stage/
 /local.mk
 /.b2g.mk
@@ -73,6 +73,5 @@ manifest.appcache
 /test_external_apps/*/test/unit/_proxy.html
 apps/*, external-apps/* & GAIA_DISTRIBUTION_DIR
 
-/build/config.js
 /apps/keyboard/js/imes/latin/dictionaries/*.dict
 /apps/keyboard/js/layouts/*.js
