--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
+    - env: CI_ACTION=gaia_ui_tests
     - env: CI_ACTION=jshint
 notifications:
   email: false
