--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
@@ -6,6 +6,8 @@ b2g = true
 [test_context_menu_activity_picker.py]
 
 [test_geolocation_prompt.py]
+# Bug 952292 - [UITests] Travis Intermittent: TEST-UNEXPECTED-FAIL | test_geolocation_prompt.py
+skip-if = device == "desktop"
 
 [test_edge_gestures.py]
 # Bug 891882  Several components rely on touch events are malfunctioning on B2G desktop
@@ -14,3 +16,5 @@ fail-if = device == "desktop"
 [test_quick_settings.py]
 
 [test_system_message.py]
+# Bug 956127 - [UITests] Travis Intermittent: test_system_message.py
+skip-if = device == "desktop"
