--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "download": "0.1.7",
     "async": "0.2.9",
     "adm-zip": "0.4.3",
-    "dive": "0.3.0"
+    "dive": "0.3.0",
+    "grunt": "0.4.2",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-jsdoc": "0.5.0"
   }
 }
