--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ branches:
   - v1.0.1
 env:
   matrix:
-  - CI_ACTION=gjslint
-  - CI_ACTION=test_agent
-  - CI_ACTION=marionette_js
+#  - CI_ACTION=gjslint
+#  - CI_ACTION=test_agent
+#  - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
-  - CI_ACTION=build_tests
-  - CI_ACTION=jshint
+#  - CI_ACTION=build_tests
+#  - CI_ACTION=jshint
   global:
   - ARTIFACTS_S3_BUCKET=mozilla-releng-travis-uploads
   - secure: Gf2qm+xhLRTotuIvDD7HrNRmng3/dctGdsgF5P4aEu3nDujfxtZTp4sGirTqIngbfVzh9WkJ9eoT0yaDXtvWkr40Df6vwAUyI3P1x+NBOa2CkLz7U+f9j1yaJ3pJ121+L3o+7eTzJy/mvXHJYXAfa7rxcmjrCHpH5BSm+9/OZ4s=
