--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
@@ -6,8 +6,8 @@ b2g = true
 [test_context_menu_activity_picker.py]
 
 [test_geolocation_prompt.py]
-# Bug 952292 - [UITests] Travis Intermittent: TEST-UNEXPECTED-FAIL | test_geolocation_prompt.py
-skip-if = device == "desktop"
+#  Bug 955906 - Geolocation broken on non certified apps
+fail-if = device == "desktop"
 
 [test_edge_gestures.py]
 # Bug 891882  Several components rely on touch events are malfunctioning on B2G desktop
