Bug 956031 - Checking for geolocation icon precludes this test from running on CI environments r=me

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
@@ -6,7 +6,7 @@ b2g = true
 [test_context_menu_activity_picker.py]
 
 [test_geolocation_prompt.py]
-# Bug 952292 - [UITests] Travis Intermittent: TEST-UNEXPECTED-FAIL | test_geolocation_prompt.py
+# Cannot run on Travis/TBPL as there is no geolocation hardware
 skip-if = device == "desktop"
 
 [test_edge_gestures.py]
