--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt": "0.4.2",
     "grunt-contrib-clean": "0.5.0",
     "grunt-jsdoc": "0.5.0",
-    "marionette-file-manager": "0.0.2"
+    "marionette-file-manager": "0.0.2",
+    "q": "~0.9.7"
   }
 }
