--- a/.jshintignore
+++ b/.jshintignore
@@ -12,6 +12,7 @@ apps/email/js/tmpl_builder.js
 apps/clock/js/alameda.js
 shared/js/opensearch.js
 apps/keyboard/js/imes/jspinyin/libpinyin.js
+shared/js/alameda.js
 shared/js/setImmediate.js
 apps/gallery/test/unit/setImmediate_test.js
 apps/wappush/js/ext/**
