--- a/package.json
+++ b/package.json
@@ -3,37 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "description": "A bundle of components which Gaia needs in order to leverage marionette-js-runner",
-  "author": "Gareth Aye <gaye@mozilla.com>",
-  "devDependencies": {
-    "debug": "*",
-    "empty-port": "~0.0.1",
-    "jshint": "2.4.1",
-    "mail-fakeservers": "~0.0.11",
-    "marionette-apps": "~0.3.3",
-    "marionette-client": "~1.1.0",
-    "marionette-content-script": "0.0.0",
-    "marionette-device-host": "0.0.1",
-    "marionette-helper": "~0.2.0",
-    "marionette-profile-builder": "0.0.2",
-    "marionette-js-runner": "0.4.0-non-native",
-    "marionette-settings-api": "~0.1.0",
-    "mocha": "1.15.0",
-    "mocha-json-proxy": "~0.0.7",
-    "mocha-tbpl-reporter": "~0.0.4",
-    "moment": "~2.4.0",
-    "mozilla-download": "~0.4.1-alpha",
-    "node-static": "0.6.9",
-    "travis-project-jobs": "0.0.1",
-    "chai": "~1.4.2",
-    "proxyquire": "~0.4",
-    "rimraf": "2.2.5",
-    "download": "0.1.7",
-    "async": "0.2.9",
-    "adm-zip": "0.4.3",
-    "dive": "0.3.0",
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-jsdoc": "0.5.0",
-    "marionette-file-manager": "0.0.2"
-  }
+  "author": "Gareth Aye <gaye@mozilla.com>"
 }
+
