Bug 957122 - Enable more TBPL tests - Messages app
Enable test_sms_add_contact and test_sms_to_settings on TBPL

--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -37,8 +37,10 @@ disabled = Bug 946130
 [functional/lockscreen/test_lockscreen_unlock_to_homescreen.py]
 disabled = Bug 891882
 [functional/lockscreen/test_lockscreen_notification.py]
+[functional/messages/test_sms_add_contact.py]
 [functional/messages/test_sms_contact_input_validation.py]
 [functional/messages/test_sms_contact_match.py]
+[functional/messages/test_sms_to_settings.py]
 [functional/settings/test_settings_change_keyboard_language.py]
 [functional/settings/test_settings_change_language.py]
 [functional/settings/test_settings_do_not_track.py]
