Bug 959611 - investigate and fix test_send_active_sync_email.TestSendActiveSyncEmail

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/email/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/email/manifest.ini
@@ -11,5 +11,7 @@ online = true
 [test_send_imap_email.py]
 
 [test_send_active_sync_email.py]
+# Bug 959611 - investigate and fix test_send_active_sync_email.TestSendActiveSyncEmail
+expected = fail
 
 [test_receive_active_sync_email.py]
