--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -39,6 +39,7 @@ disabled = Bug 891882
 [functional/lockscreen/test_lockscreen_notification.py]
 [functional/messages/test_sms_contact_input_validation.py]
 [functional/messages/test_sms_contact_match.py]
+[functional/settings/test_settings_app_permissions.py]
 [functional/settings/test_settings_change_keyboard_language.py]
 [functional/settings/test_settings_change_language.py]
 [functional/settings/test_settings_do_not_track.py]
