--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -45,6 +45,7 @@ disabled = Bug 891882
 [functional/settings/test_settings_gps.py]
 [functional/settings/test_settings_passcode.py]
 [functional/settings/test_settings_wallpaper.py]
+[functional/system/test_context_menu_activity_picker.py]
 [functional/system/test_quick_settings.py]
 [functional/system/test_system_message.py]
 [functional/system/test_system_notification_bar.py]
