Bug 957122 - Enable more TBPL tests - System app
Enable test_context_menu_activity_picker on TBPL

--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -51,6 +51,7 @@ disabled = Bug 891882
 skip-if = os == "mac"
 [functional/settings/test_settings_passcode.py]
 [functional/settings/test_settings_wallpaper.py]
+[functional/system/test_context_menu_activity_picker.py]
 [functional/system/test_quick_settings.py]
 [functional/system/test_system_message.py]
 [functional/system/test_system_notification_bar.py]
