Bug 957122 - Enable more TBPL tests - Unit tests
Enable test_prefs on TBPL

--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -2,14 +2,15 @@
 b2g = true
 
 [unit/settings/test_settings.py]
+[unit/test_cleanup_gaia.py]
 [unit/test_cold_launch.py]
 [unit/test_contacts.py]
-[unit/test_cleanup_gaia.py]
 [unit/test_kill.py]
 [unit/test_killall.py]
 [unit/test_launch_twice.py]
 [unit/test_lock_screen.py]
 [unit/test_permissions.py]
+[unit/test_prefs.py]
 [unit/test_warm_launch.py]
 
 [functional/calendar/test_calendar_new_event_appears_on_all_calendar_views.py]
