Bug 958340 - Package.json pulls from github

--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
   "description": "A bundle of components which Gaia needs in order to leverage marionette-js-runner",
   "author": "Gareth Aye <gaye@mozilla.com>",
   "devDependencies": {
-    "debug": "*",
-    "empty-port": "~0.0.1",
-    "jshint": "2.4.1",
-    "mail-fakeservers": "~0.0.11",
-    "marionette-apps": "~0.3.3",
-    "marionette-client": "~1.1.0",
-    "marionette-content-script": "0.0.0",
-    "marionette-device-host": "0.0.1",
-    "marionette-helper": "~0.2.0",
-    "marionette-plugin-forms": "0.0.1",
-    "marionette-profile-builder": "0.0.2",
-    "marionette-js-runner": "0.4.0-non-native",
-    "marionette-settings-api": "~0.1.0",
-    "mocha": "1.15.0",
-    "mocha-json-proxy": "~0.0.7",
-    "mocha-tbpl-reporter": "~0.0.4",
-    "moment": "~2.4.0",
-    "mozilla-download": "~0.4.1-alpha",
-    "node-static": "0.6.9",
-    "travis-project-jobs": "0.0.1",
-    "chai": "~1.4.2",
-    "proxyquire": "~0.4",
-    "rimraf": "2.2.5",
-    "download": "0.1.7",
-    "async": "0.2.9",
-    "adm-zip": "0.4.3",
-    "dive": "0.3.0",
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-jsdoc": "0.5.0",
-    "marionette-file-manager": "0.0.2"
+    "debug": "git://github.com/visionmedia/debug.git#8068c0983ca1596b868a1f2bc21443aedce7dee4",
+    "empty-port": "git://github.com/fnobi/emptyPort.git#e2d7d21673100eb3d0ad125f67dc541708299997",
+    "jshint": "git://github.com/jshint/jshint.git#af845907d5772d090ab0c3ed99f20491bbbca5f0",
+    "mail-fakeservers": "git://github.com/mozilla-b2g/mail-fakeservers.git#dbf1a4eb8995b643a6635b5bbff65be6b4679aac",
+    "marionette-apps": "git://github.com/mozilla-b2g/marionette-apps.git#b7ae3160ef98d096a4bf10f78c24c7e23ec77105",
+    "marionette-client": "git://github.com/mozilla-b2g/marionette-js-client.git#fbffc548181ca4797e2dc9422e11c440bd56f58d",
+    "marionette-content-script": "git://github.com/mozilla-b2g/marionette-content-script.git#c5cbb2c067c548172b444d5243ca80a6df01b94c",
+    "marionette-device-host": "git://github.com/mozilla-b2g/marionette-device-host.git#065ab8d36f2dca72da465a1deb01e6bda6a6fcc8",
+    "marionette-helper": "git://github.com/mozilla-b2g/marionette-helper.git#73c037ac4aabed947da4bc67b21beddf753808d3",
+    "marionette-plugin-forms": "git://github.com/mozilla-b2g/marionette-plugin-forms.git#0588bcd7ca8264b2461e4be0d6118bc1abfd93e5",
+    "marionette-profile-builder": "git://github.com/mozilla-b2g/marionette-profile-builder.git#847b3c01143fff27a392cd449b48f8e04b8e4f06",
+    "marionette-js-runner": "git://github.com/mozilla-b2g/marionette-js-runner.git#999c01c1b655d3c5555bd746310048aa343ec2a4",
+    "marionette-settings-api": "git://github.com/mozilla-b2g/marionette-settings-api.git#1d88d2147a4dd0fd76d39b5ca10ca6a7a8c68252",
+    "mocha": "git://github.com/visionmedia/mocha.git#ffaa38d49d10d4a5efd8e8b67db2960c4731cdc3",
+    "mocha-json-proxy": "git://github.com/mozilla-b2g/mocha-json-proxy.git#b8c35f7793a6d39018e0fc3fe5b5550ff7da2a1b",
+    "mocha-tbpl-reporter": "git://github.com/mozilla-b2g/mocha-tbpl-reporter.git#e72672494772a76b351361492ce8677723f86b08",
+    "moment": "git://github.com/moment/moment.git#d5f2524418999a3bbaada4fa1ed07a97fa68fad6",
+    "mozilla-download": "git://github.com/mozilla-b2g/mozilla-download.git#951e6428c9911a335d4df74e17a506ac9d8e1370",
+    "node-static": "git://github.com/cloudhead/node-static#4858a8212c580fa831b9614825275f38791df579",
+    "travis-project-jobs": "git://github.com/mozilla-b2g/travis-project-jobs.git#25f657950ab3afdbce681b99056aa97857b16ae8",
+    "chai": "git://github.com/chaijs/chai.git#1d0ce1354c643837166780b4b10cdfaba939b86f",
+    "proxyquire": "git://github.com/thlorenz/proxyquire.git#2d7e1c42785d1f16f448f874f900f7aed7e4b6f3",
+    "rimraf": "git://github.com/isaacs/rimraf.git#843c29b611e3e0a3afd09d032883b466e2608014",
+    "download": "git://github.com/kevva/download.git#717afdd0800d0ae56720bb0af0b07d12b4137550",
+    "async": "git://github.com/caolan/async.git#f01b3992fbe7aa2f4881152143608ad666aea1cc",
+    "adm-zip": "git://github.com/cthackers/adm-zip.git#267ee1327538c112429f042d779870978a7c057b",
+    "dive": "git://github.com/pvorb/node-dive.git#41c061b9d114034b95fb8b7b04b6ee3eb94e1d23",
+    "grunt": "git://github.com/gruntjs/grunt.git#5ab7a3ed6885fdbf4b458d72d65d488cf9eedf48",
+    "grunt-contrib-clean": "git://github.com/gruntjs/grunt-contrib-clean.git#cc125bd852d15235e916da3b7f76486df570e07c",
+    "grunt-jsdoc": "git://github.com/krampstudio/grunt-jsdoc-plugin.git#3a6046d471697bc5a05c2a58770a0e3064cf3d12",
+    "marionette-file-manager": "git://github.com/mozilla-b2g/marionette-file-manager.git#da8c69b9b0472c9f86a8d72c8191c4dd97be3f39"
   }
 }
