--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -43,6 +43,7 @@ disabled = Bug 891882
 [functional/settings/test_settings_change_language.py]
 [functional/settings/test_settings_do_not_track.py]
 [functional/settings/test_settings_gps.py]
+skip-if = os == "mac"
 [functional/settings/test_settings_passcode.py]
 [functional/settings/test_settings_wallpaper.py]
 [functional/system/test_quick_settings.py]
