Enable rocketbar for travis testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ after_script: ./node_modules/.bin/travisaction $CI_ACTION after_script
 branches:
   only:
   - master
+  - rocketbar
 env:
   matrix:
   - CI_ACTION=gjslint
