Xfail test_sms_with_attachments with the new bug

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -8,7 +8,7 @@ skip-if = device == "desktop"
 [test_sms_add_contact.py]
 
 [test_sms_with_attachments.py]
-# Bug 958555 - Accesing the Camera app from the Message app using marionette, causes the Camera app to become unresponsive
+# Bug 960537 - Unable to send MMS
 expected = fail
 camera = true
 skip-if = device == "desktop"
