Bug 960884 - Enable and remove rocketbar preference

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/everythingme/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/everythingme/manifest.ini
@@ -4,7 +4,8 @@ online = true
 
 [test_everythingme_launch_app.py]
 # Bug 893741 - Unable to use Everything.me on B2G desktop builds
-fail-if = device == "desktop"
+# Skipped due to rocketbar implementation
+skip-if = device == "desktop"
 
 [test_everythingme_add_collection.py]
 # Bug 893741 - Unable to use Everything.me on B2G desktop builds
@@ -23,4 +24,5 @@ fail-if = device == "desktop"
 fail-if = device == "desktop"
 
 [test_everythingme_launch_packaged_app.py]
-
+# Skipped due to rocketbar implementation
+skip-if = device == "desktop"
