--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/lockscreen/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/lockscreen/manifest.ini
@@ -2,6 +2,8 @@
 b2g = true
 
 [test_lockscreen_unlock_to_homescreen.py]
+# Bug 891882 Cannot unlock lockscreen on desktop
+skip-if = device == "desktop"
 
 [test_lockscreen_unlock_to_camera.py]
 skip-if = device == "desktop"
@@ -12,6 +14,7 @@ skip-if = device == "desktop"
 camera = true
 
 [test_lockscreen_unlock_to_homescreen_with_passcode.py]
+skip-if = device == "desktop"
 
 [test_lockscreen_unlock_to_emergency_call_screen.py]
 skip-if = device == "desktop"
