--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "debug": "*",
     "empty-port": "~0.0.1",
+    "ffi-prebuilt": "~1.2.6",
     "jshint": "2.4.1",
     "mail-fakeservers": "~0.0.11",
     "marionette-apps": "~0.3.3",
