--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
@@ -4,4 +4,7 @@ online = true
 
 [test_persona_cookie.py]
 
+
 [test_persona_app.py]
+# Bug 956165 - [UITests] Travis Intermittent: test_persona_app.py
+skip-if = device == "desktop"
