--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -10,7 +10,7 @@ skip-if = device == "desktop"
 [test_sms_with_attachments.py]
 camera = true
 skip-if = device == "desktop"
-# Bug 945774 - Messages app is closing while resizing an image for MMS from the Camera
+# Bug 960537 - [Messages] Unable to send MMS
 expected = fail
 
 [test_sms_to_dialer.py]
