--- a/.jshintignore
+++ b/.jshintignore
@@ -12,6 +12,7 @@ apps/email/js/alameda.js
 apps/email/js/tmpl_builder.js
 apps/clock/js/alameda.js
 shared/js/opensearch.js
+shared/js/utilities.js
 apps/keyboard/js/imes/jspinyin/libpinyin.js
 apps/keyboard/js/imes/jszhuyin/lib/**
 shared/js/setImmediate.js
