--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ manifest.appcache
 /apps/costcontrol/js/config.json
 /apps/sms/js/blacklist.json
 /test_apps/test-agent/test/config.json
+/test_apps/test-agent/common/vendor/
+/tools/xpcwindow/
 /apps/dialer/contacts
 /apps/browser/js/init.json
 /apps/communications/contacts/config.json
@@ -55,8 +57,6 @@ manifest.appcache
 /build_stage/
 /local.mk
 /.b2g.mk
-
-/tools/xpcwindow/vendor/
 
 /outoftree_apps/
 
