--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/persona/manifest.ini
@@ -3,9 +3,11 @@ b2g = true
 online = true
 
 [test_persona_cookie.py]
-# Bug 960240 - [UITests] Travis Intermittent: test_persona_cookie.py
-skip-if = device == "desktop"
+# Bug 963582 - Persona frame is not visible after taping the login button
+expected = fail
 
 [test_persona_app.py]
 # Bug 956165 - [UITests] Travis Intermittent: test_persona_app.py
+# Bug 963582 - Persona frame is not visible after taping the login button
 skip-if = device == "desktop"
+expected = fail
