Bug 958524 - Fix test_camera_flash_mode to use a manifest tag

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
@@ -14,6 +14,7 @@ fail-if = device == "qemu"
 skip-if = device == "desktop"
 
 [test_camera_flash_modes.py]
+flash = true
 # Bug 946375 - Unable to capture photos and videos on emulator
 fail-if = device == "qemu"
 skip-if = device == "desktop"
