--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,7 @@ matrix:
     - env: CI_ACTION=unit-tests-in-b2g
 notifications:
   email: false
-
+  irc:
+    on_success: change
+    channels:
+    - irc.mozilla.org#gaia
