--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
   - CI_ACTION=unit-tests-in-firefox
   - CI_ACTION=marionette_js
   - CI_ACTION=gaia_ui_tests
+  - CI_ACTION=gaia_ui_tests_2
   - CI_ACTION=build_tests
   global:
   - ARTIFACTS_S3_BUCKET=mozilla-releng-travis-uploads
