--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
@@ -17,7 +17,7 @@ skip-if = device == "desktop"
 [test_camera_flash_modes.py]
 flash = true
 # Bug 964812 - Disable test_camera_flash
-disabled = true
+skip-if = device == "msm7627a"
 # Bug 946375 - Unable to capture photos and videos on emulator
 fail-if = device == "qemu"
 skip-if = device == "desktop"
