Bug 946812 - Disable test_camera_flash_modes.py (no flash)

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/camera/manifest.ini
@@ -17,10 +17,10 @@ skip-if = device == "desktop"
 [test_camera_flash_modes.py]
 flash = true
 # Bug 964812 - Disable test_camera_flash
-skip-if = device == "msm7627a"
+# No camera/flash on desktop
+skip-if = device == "msm7627a" || device == "desktop"
 # Bug 946375 - Unable to capture photos and videos on emulator
 fail-if = device == "qemu"
-skip-if = device == "desktop"
 
 [test_camera_multiple_shots.py]
 # Bug 946375 - Unable to capture photos and videos on emulator
