--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -17,9 +17,9 @@ b2g = true
 [functional/calendar/test_calendar_new_event_appears_on_all_calendar_views.py]
 [functional/calendar/test_calendar_today_date.py]
 [functional/cards_view/test_cards_view_kill_apps_with_two_apps.py]
-skip-if = os == "mac"
+disabled = Bug 962655 - Rocketbar changes functionality of cards view
 [functional/cards_view/test_cards_view_with_two_apps.py]
-disabled = Bug 946130
+disabled = Bug 946130 - Rocketbar changes functionality of cards view
 [functional/clock/test_clock_add_alarm_multiple_times.py]
 [functional/clock/test_clock_create_new_alarm.py]
 [functional/clock/test_clock_delete_alarm.py]
@@ -32,6 +32,7 @@ disabled = Bug 946130
 [functional/contacts/test_add_contact_to_favorites.py]
 [functional/dialer/test_dialer_add_contact.py]
 [functional/everythingme/test_everythingme_launch_packaged_app.py]
+disabled = Bug 962795 - Rocketbar UI Testing
 [functional/homescreen/test_homescreen_edit_mode.py]
 [functional/homescreen/test_homescreen_move_app.py]
 [functional/keyboard/test_email_keyboard.py]
