--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/system/manifest.ini
@@ -19,6 +19,7 @@ skip-if = device == "desktop"
 skip-if = device == "desktop"
 
 [test_privileged_app_contacts_prompt.py]
+diabled = Bug 966729 - Waiting for new build
 
 [test_privileged_app_device_music_prompt.py]
 skip-if = device == "desktop"
