--- a/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/tbpl-manifest.ini
@@ -42,6 +42,8 @@ disabled = Bug 962795 - Rocketbar UI Testing
 [functional/keyboard/test_url_keyboard.py]
 [functional/lockscreen/test_lockscreen_notification.py]
 [functional/lockscreen/test_lockscreen_unlock_to_emergency_call_screen.py]
+[functional/lockscreen/test_lockscreen_unlock_to_camera.py]
+[functional/lockscreen/test_lockscreen_unlock_to_camera_with_passcode.py]
 [functional/lockscreen/test_lockscreen_unlock_to_homescreen.py]
 disabled = Bug 891882
 [functional/lockscreen/test_lockscreen_wake_with_notification.py]
