Bug 967574 - [1.3] Xfail test_sms_with_attachments with Bug 964233 as Bug 960537 is fixed

--- a/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
+++ b/tests/python/gaia-ui-tests/gaiatest/tests/functional/messages/manifest.ini
@@ -10,7 +10,7 @@ skip-if = device == "desktop"
 [test_sms_with_attachments.py]
 camera = true
 skip-if = device == "desktop"
-# Bug 960537 - [Messages] Unable to send MMS
+# Bug 964233 - [v1.3] Investigate intermittent fail for [test_sms_with_attachments.py]
 expected = fail
 
 [test_sms_to_dialer.py]
